# keyboard

./: .gitignore  CMakeLists.txt  README.md  main.c  memmap_custom.ld
src/: CMakeLists.txt  main.c
src/config/: CMakeLists.txt  config.h
src/flash/: CMakeLists.txt  flash.c  flash.h
src/halves/: CMakeLists.txt  uart.c  uart.h
src/keys/: CMakeLists.txt  debounce.c  debounce.h  keys.c  keys.h
src/oled/: CMakeLists.txt  debug.c  debug.h  oled.c  oled.h
src/oled/fonts/: IBM_BIOS.h  IBM_CGAthin.h
src/rotary/: CMakeLists.txt  rotary.c  rotary.h
src/usb/: CMakeLists.txt  hid.c  hid.h  setup.c  setup.h  usb_descriptors.c
